# hydroFV

./: .gitignore  LICENSE  README.md  sod_shock_1d.py
FiniteVolume1D/: __init__.py  cell.py  exact_riemann_solver.py  godunov_first_order.py  random_choice.py  sod_shock.py  source_term.py  system.py  utils.py
FiniteVolumeSpherical/: exact_riemann_solver.py  godunov_first_order.py  sod_shock.py  system.py  utils.py
FiniteVolumeSpherical1D/: __init__.py  godunov_first_order.py  sedov_blast.py  sod_shock.py
examples/: sedov_blast.py  sod_shock.py  sod_shock_1d.py  sod_shock_spherical.py
examples/kelvin_helmholtz_2d/: CMakeLists.txt  animate_kelvin_helmholtz_2d.py  compare_plot.py  kelvin_helmholtz.csv  kelvin_helmholtz_2d.c  max_y_energy.py  max_y_energy_ref.csv  process_kh_density.py
examples/modified_lid_driven_cavity_2d/: CMakeLists.txt  animate_lid_driven_cavity_2d.py  lid_driven_cavity_2d.c
examples/rayleign_taylor_2d/: CMakeLists.txt  animate_rayleigh_taylor_2d.py  rayleigh_taylor_2d  rayleigh_taylor_2d.c
examples/sedov_blast/: Makefile  plot_sedov_blast.py  sedov_blast.c
examples/sedov_blast_1d/: CMakeLists.txt  plot_sedov_blast_1d.py  sedov_blast_1d.c
examples/sedov_blast_2d/: CMakeLists.txt  animate_sedov_blast_2d.py  plot_sedov_blast_2d.py  sedov_blast_2d.c
examples/sod_shock/: sod_shock.py  sol_cylindrical_1d.npz  sol_spherical_1d.npz  sol_spherical_1d_0.2.npz
examples/sod_shock_1d/: CMakeLists.txt  Makefile  plot_comparison.py  plot_sod_shock.py  plot_sod_shock_1d.py  sod_shock.c  sod_shock_1d.c  sol_cartesian_1d_0.2.npz  sol_cylindrical_1d_0.2.npz
examples/template_1d/: CMakeLists.txt  template_1d.c
examples/template_2d/: CMakeLists.txt  template_2d.c
riemann_solvers/: __init__.py  exact_riemann_solver_1d.py  hllc_riemann_solver_1d.py  riemann_solver.py  utils.py
src/: CMakeLists.txt  Makefile  boundary.c  boundary.h  common.h  error.c  error.h  hydro.c  hydro.h  hydro_time.c  hydro_time.h  integrator.c  integrator.h  integrator_godunov_first_order.c  integrator_godunov_first_order_1d.c  integrator_godunov_first_order_2d.c  integrator_muscl_hancock.c  integrator_random_choice_1d.c  progress_bar.c  progress_bar.h  reconstruction.c  reconstruction.h  riemann_solver.c  riemann_solver.h  riemann_solver_exact.c  riemann_solver_exact.h  riemann_solver_hllc.c  riemann_solver_hllc.h  slope_limiter.c  slope_limiter.h  source_term.c  source_term.h  storing.c  storing.h  system.c  system.h  utils.c  utils.h
